tdf#101822 Always de-zombie the glxtest process

Make sure we wait for the glxtest process.

Change-Id: I143290b80ba83e35f8d0f95d133c25178c5fe563
(cherry picked from commit 3bc2b8c5e0c4213b53a974944189bdf7f8155502)